[gd_scene load_steps=3 format=3 uid="uid://bgbfgrjoje6kg"]

[ext_resource type="Script" path="res://scenes/ControllInputUI.gd" id="1_41flp"]
[ext_resource type="Texture2D" uid="uid://clq3pdw78kl63" path="res://assets/circle.png" id="2_vgv0c"]

[node name="ControllerInputUI" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_41flp")

[node name="Background" type="Panel" parent="."]
layout_mode = 0
offset_right = 120.0
offset_bottom = 120.0

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 110.0
offset_bottom = 110.0
color = Color(0.411765, 0.411765, 0.411765, 1)

[node name="ValueCircle" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 110.0
offset_bottom = 110.0
texture = ExtResource("2_vgv0c")

[node name="DeadzonedValue" type="ColorRect" parent="ValueCircle"]
layout_mode = 0
offset_left = 45.0
offset_top = 45.0
offset_right = 55.0
offset_bottom = 55.0
pivot_offset = Vector2(5, 5)
color = Color(0.92549, 0, 0.956863, 1)

[node name="RealValue" type="ColorRect" parent="ValueCircle"]
layout_mode = 0
offset_left = 47.0
offset_top = 47.0
offset_right = 53.0
offset_bottom = 53.0
pivot_offset = Vector2(3, 3)
color = Color(0, 1, 0, 1)
